Updated txttosql with psql
